# opentcad

./: .gitignore  CLAUDE.md  LICENSE  PHASES.md  README.md  Strategy.md  pyproject.toml
examples/: 01_pn_junction.py
opentcad/: __init__.py
opentcad/bridge/: CLAUDE.md  field_interpolator.py
opentcad/device/: CLAUDE.md  solver.py
opentcad/geometry/: CLAUDE.md  formats.py  mesh.py  structure.py
opentcad/materials/: CLAUDE.md  database.py
opentcad/materials/params/: Si.yaml  SiO2.yaml
opentcad/process/: CLAUDE.md
tests/: conftest.py
tests/bridge/: test_field_interpolator.py
tests/device/: test_mos_capacitor.py  test_pn_junction_integration.py  test_solver_api.py
tests/geometry/: test_formats.py  test_mesh.py
tests/materials/: test_database.py
